# algopractice

./: .clang-format  CMakeLists.txt  README.md
practice/: BalancedSubarray.cpp  BinarySearch.cpp  CMakeLists.txt  CodilitySample.cpp  CountConnectedComponents.cpp  Cpp20Tests.cpp  CustomFibonacci.cpp  Dijkstra.cpp  GenerateValidAngleBracketSequences.cpp  HouseRobber.cpp  LCS.cpp  LongestContiguousSubarray.cpp  MaxUniqueSubstringLength.cpp  MinimumLengthSum.cpp  NonIdenticalStringRotation.cpp  OnePassRemoveKthNodeFromEnd.cpp  QueryRanges.cpp  SecurityCameraBlocked.cpp  SmallestMissingPositiveIntegerNoSort.cpp  SmallestPositiveIntegerNotInA.cpp  SortByFinishTime.cpp  SortByStartTime.cpp  SubarraysGivenSumAndBoundedMax.cpp  TreeCompare.cpp  TreeHeight.cpp  TriangleProblem.cpp  TwoValueSum.cpp  UnionFind.cpp  UniquePairs.cpp  ValidateproperlyNestedBrackets.cpp
src/: CMakeLists.txt  main.cpp
src/binarysearch/: cavedoors.cpp  cavedoors.h  feedingants.cpp  feedingants.h  livingquality.cpp  livingquality.h  riverjump.cpp  riverjump.h
src/core/: DebugUtils.cpp  DebugUtils.h  DisjointSet.h  Grid.cpp  Grid.h  HashUtils.cpp  HashUtils.h  Heap.cpp  Heap.h  LogUtils.cpp  LogUtils.h  MathUtil.cpp  MathUtil.h  Matrix.h  RandomUtils.cpp  RandomUtils.h  SegmentTree.cpp  SegmentTree.h  StringUtils.cpp  StringUtils.h  TestUtils.h
src/datamanip/: RotateArray.cpp  RotateArray.h
src/divideAndConquer/: BinarySearch.h  MaximumSubarray.cpp  MaximumSubarray.h  divideAndConquer.cpp
src/dsAccelerators/: buildingtreaps.cpp  buildingtreaps.h  supermarketPromotion.cpp  supermarketPromotion.h
src/examples/: 1-Overview.cpp  13-IO.cpp  17-Ranges.AndIterators.cpp  17-Ranges.cpp  18-Containers.cpp  19-Functions.cpp  2-Strings..cpp  20-STLAlgorithms.cpp  21-StringLocalizationAndRegularExpressions.cpp  24-RandomNumbers.cpp  24-VocabTypes.cpp  25-ExtendingTheSTL.cpp  27-MulithreadedProgramming.cpp  7-Memory.cpp  8-ClassesAndObjects.cpp  9-MasteringClassesAndObjects.cpp  CMakeLists.txt
src/graph/: RopeClimb.cpp  RopeClimb.h  bfsknightchase.cpp  bfsknightchase.h  booktranslation.cpp  booktranslation.h  digraph.h  grandmaplanner.cpp  grandmaplanner.h  graph.h  jobscheduler.cpp  jobscheduler.h  micemaze.cpp  micemaze.h
src/memoization/: AtLeastKnapsack.cpp  AtLeastKnapsack.h  ForwardsAndBackwards.cpp  ForwardsAndBackwards.h  Knapsack.cpp  Knapsack.h  LongestCommonSubsequence.cpp  LongestCommonSubsequence.h
src/misc/: foodlines.cpp  foodlines.h  oneoffspellcheck.cpp  oneoffspellcheck.h  snowflake.h  weirdpasswordsystem.cpp  weirdpasswordsystem.h
src/problems/: 14-HandlingErrors.cpp  19-Functions.cpp  CMakeLists.txt  booktranslation.cpp  burgerfervor.cpp  cppio.cpp  cpptricks.cpp  descendantdistance.cpp  foodlines.cpp  halloweenhaul.cpp  hockeyproblem.cpp  micemaze.cpp  moneygrubbers.cpp  oneoffspellcheck.cpp  snowflake.cpp  weirdpasswordsystem.cpp
src/randomization/: CapsAndBottles.cpp  CapsAndBottles.h  Yokan.cpp  Yokan.h
src/sorting/: sorting.h
src/tree/: BinaryTree.h  NaryTree.h
test/: CMakeLists.txt  sorting_test.cpp
test/Sorting/: TestSorting.cpp
test/binarysearch/: TestAntProblem.cpp  TestLivingQuality.cpp  TestRiverJump.cpp
test/core/: TestDigraph.cpp  TestDisjointSet.cpp  TestGrid.cpp  TestHashmap.cpp  TestHeap.cpp  TestMatrix.cpp  TestSegmentTree.cpp  TestXORTrick.cpp
test/cppFeatures/: CompileTimeExample.cpp  TestCompileTimeExamples.cpp
test/divideAndConquer/: TestBinarySearch.cpp  TestMaximumSubarrayRecursive.cpp
test/dsAccelerators/: TestBulidingTreaps.cpp  TestSupermarketPromotion.cpp
test/graph/: TestBFSKnightChase.cpp  TestBFSRopeClimb.cpp  TestGrandmaPlanner.cpp  TestGraph.cpp  TestJobScheduler.cpp  TestMiceMaze.cpp
test/memoization/: TestAtLeastKnapsack.cpp  TestForwardsAndBackwards.cpp  TestKnapsack.cpp  TestLongestCommonSubsequence.cpp
test/misc/: testfoodlines.cpp  testonefoffspellcheck.cpp  testsnowflake.cpp
test/randomization/: TestCapsAndBottles.cpp  TestYokan.cpp
test/stl/: testranges.cpp
test/tree/: TestBinaryTree.cpp
